--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- p5.js -->
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.3/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.3/lib/p5.min.js" crossorigin="anonymous"></script>
     <!-- ml5.js -->
-    <script src="https://unpkg.com/ml5@1/dist/ml5.js"></script>
+    <script src="https://unpkg.com/ml5@1/dist/ml5.js" crossorigin="anonymous"></script>
     <!-- p5play dependencies (planck) -->
-    <script src="https://p5play.org/v3/planck.min.js"></script>
+    <script src="https://p5play.org/v3/planck.min.js" crossorigin="anonymous"></script>
     <!-- p5play -->
-    <script src="https://p5play.org/v3/p5play.js"></script>
+    <script src="https://p5play.org/v3/p5play.js" crossorigin="anonymous"></script>
     <style>
       body {
         margin: 0;
